@startuml "Comedor"

object nutrividas{
    List <Nutricionista> nutricionistas
    List <Comedor> comedores
    List<Producto> productosdisponibles
'   List<Producto> productosEnBolsa ==> Productos en general
    List<Canasta> canastas
    List<Usuario> usuarios
}

class Comedor{
    Long id
    String nombre
    String direccion
    String localidad
    String provincia
    Integer cantidadDePersonas
    Long telefono
    List <Persona> personas
    List<Canasta> canastas
    String biografia
    Boolean alta

}

class Persona{
    Long dni
    String nombre
    String apellido
    LocalDate fechaNacimiento
    Integer edad
    Integer altura
    Integer peso
    List <String> enfermedades
    Double IMC
    Boolean alta  
}

class Elemento{
    Long id
    Producto producto
    Integer cantidadNecesaria
    Integer cantidadComprada
    Boolean fueComprado
}

Class Producto{
    Long id
    String nombre
    String marca
    Double precio
    Boolean aptoCeliacos
    Boolean aptoHipertensos
    Boolean aptoDiabeticos
    Boolean aptoIntoleranteLactosa
}

class Canasta{
    Long id
    String descripcion
    Integer cantidadDePersonas
    List <Elemento> elementos

}

class Usuario{
    Long id
    Long dni
    String nombre
    String apellido
    String mail    
    Long telefono
    List<Tarjeta> tarjetas
    Boolean alta
}

class Tarjeta{
    Integer id
    String nombre
    String apellido
    Long numeroTarjeta
    Integer codigoSeguridad
    String tipoTarjeta
    LocalDate fechaVencimiento
}

class Nutricionista{
    Long id
    String nombre
    String apellido
    String matricula
    Long telefono
    String mail
    List<Comedor> comedoresACargo
    Boolean alta
}

nutrividas -->"*" Comedor
nutrividas -->"*" Producto
nutrividas -->"*" Canasta
nutrividas -->"*" Nutricionista
Comedor -->"*" Persona
Canasta -->"*" Elemento
nutrividas -->"*" Usuario
Usuario -->"*"Tarjeta



@enduml